# ropod_com_mediator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  ros_entrypoint.sh
cmake/: Findjsoncpp.cmake
config/: waypoints.yaml
doc/: ropod_dependencies.md  ropod_msgs.md
examples/: ropod_0_tf_broadcaster.py
include/ropod_com_mediator/: com_mediator.h  com_mediator_sim.h
launch/: com_mediator.launch  com_mediator_sim.launch  ropod_com_mediator.launch  version_shouter.launch  wm_mediator.launch
msg/: ropod_control_primitive.msg  sem_waypoint_cmd.msg
scripts/: robot_command_processor.py  robot_pose_publisher.py  robot_version_shouter.py
src/: com_mediator.cpp  com_mediator_sim.cpp  demo_mediator.cpp  node.cpp  test.c  test.cpp
